--- a/app/index.ejs
+++ b/app/index.ejs
@@ -31,21 +31,8 @@
   <link rel="apple-touch-startup-image" href="/img/apple-touch-startup-image-748x1024.png" media="(device-width: 768px) and (orientation: landscape)" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
-  <%- CDN([ '/lib/modernizr.custom.07116.js', '/js/testing.js' ]) %>
-
-  <script type="text/javascript">
-
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-55600-15']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
-  </script>
+  <script src="/lib/modernizr.custom.07116.js"></script>
+  <script src="/js/testing.js"></script>
 </head>
 <body>
   <div class="body bg{{bodyState}}" ng-controller="MainCtrl">
@@ -85,8 +72,14 @@
   document.write('<script src=' + ('__proto__' in {} ? zepto_src : jquery_src) + '><\/script>');
   </script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
-  <%- CDN([ '/lib/underscore.min.js', '/lib/jquery.cookie.js' ]) %>
-  <%- CDN([ '/js/app.js', '/js/controllers.js', '/js/directives.js', '/js/filters.js', '/js/services.js', '/js/dom.js']) %>
+  <script src="/lib/underscore.min.js"></script>
+  <script src="/lib/jquery.cookie.js"></script>
+  <script src="/js/app.js"></script>
+  <script src="/js/controllers.js"></script>
+  <script src="/js/directives.js"></script>
+  <script src="/js/filters.js"></script>
+  <script src="/js/services.js"></script>
+  <script src="/js/dom.js"></script>
 
 </body>
 
