--- a/app/index.ejs
+++ b/app/index.ejs
@@ -65,13 +65,13 @@
     </div>
   </div>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.11/socket.io.min.js"></script>
+  <script src="/lib/socket-0.9.11.io.min.js"></script>
   <script>
-  var zepto_src = "//cdnjs.cloudflare.com/ajax/libs/zepto/1.0rc1/zepto.min.js",
-    jquery_src = "//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js";
+  var zepto_src = "/lib/zepto.min.js",
+    jquery_src = "/lib/jquery-1.8.2.min.js";
   document.write('<script src=' + ('__proto__' in {} ? zepto_src : jquery_src) + '><\/script>');
   </script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
+  <script src="/lib/angular/angular.min.js"></script>
   <script src="/lib/underscore.min.js"></script>
   <script src="/lib/jquery.cookie.js"></script>
   <script src="/js/app.js"></script>
