Fix URLs and routing for use on Tool Labs

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -17,18 +17,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Hatjitsu :: Online Scrum Planning Poker for Agile Projects</title>
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="/css/app.css">
+  <link rel="stylesheet" href="css/app.css">
 
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon.png" />
 
-  <link rel="apple-touch-startup-image" href="/img/apple-touch-startup-image.png" media="(device-width: 320px)" />
-  <link rel="apple-touch-startup-image" href="/img/apple-touch-startup-image-768x1004.png" media="(device-width: 768px) and (orientation: portrait)" />
-  <link rel="apple-touch-startup-image" href="/img/apple-touch-startup-image-748x1024.png" media="(device-width: 768px) and (orientation: landscape)" />
+  <link rel="apple-touch-startup-image" href="img/apple-touch-startup-image.png" media="(device-width: 320px)" />
+  <link rel="apple-touch-startup-image" href="img/apple-touch-startup-image-768x1004.png" media="(device-width: 768px) and (orientation: portrait)" />
+  <link rel="apple-touch-startup-image" href="img/apple-touch-startup-image-748x1024.png" media="(device-width: 768px) and (orientation: landscape)" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
 
   <script src="lib/modernizr.custom.07116.js"></script>
@@ -38,7 +38,7 @@
   <div class="body bg{{bodyState}}" ng-controller="MainCtrl">
     <div class="container">
       <header class="header">
-        <a href="/" title="Back to the Lobby">
+        <a href="/hatjitsu/" title="Back to the Lobby">
           <span class="header__logo{{logoState}}"></span>
           <h1 class="header__text">Hatjitsu</h1>
         </a>
@@ -72,14 +72,14 @@
   document.write('<script src=' + ('__proto__' in {} ? zepto_src : jquery_src) + '><\/script>');
   </script>
   <script src="lib/angular/angular.min.js"></script>
-  <script src="/lib/underscore.min.js"></script>
-  <script src="/lib/jquery.cookie.js"></script>
-  <script src="/js/app.js"></script>
-  <script src="/js/controllers.js"></script>
-  <script src="/js/directives.js"></script>
-  <script src="/js/filters.js"></script>
-  <script src="/js/services.js"></script>
-  <script src="/js/dom.js"></script>
+  <script src="lib/underscore.min.js"></script>
+  <script src="lib/jquery.cookie.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/directives.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/services.js"></script>
+  <script src="js/dom.js"></script>
 
 </body>
 
